--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,5 +15,11 @@
             android:layout_height="wrap_content"
             android:text="@string/btn_demo_schedulers" />
 
+        <Button
+            android:id="@+id/btn_demo_buffer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_demo_buffer" />
+
     </LinearLayout>
 </ScrollView>
