--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -21,5 +21,12 @@
             android:layout_height="wrap_content"
             android:text="@string/btn_demo_buffer" />
 
+        <Button
+            android:id="@+id/btn_demo_debounce"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="@string/btn_demo_debounce"
+            />
+
     </LinearLayout>
 </ScrollView>
