--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,5 +28,12 @@
             android:text="@string/btn_demo_debounce"
             />
 
+        <Button
+            android:id="@+id/btn_demo_double_binding_textview"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="@string/btn_demo_double_binding_textview"
+            />
+
     </LinearLayout>
 </ScrollView>
