--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -47,5 +47,12 @@
             android:layout_width="match_parent"
             android:text="@string/btn_demo_rxbus"
             />
+
+        <Button
+            android:id="@+id/btn_demo_form_validation_combinel"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:text="@string/btn_demo_form_validation_combinel"
+            />
     </LinearLayout>
 </ScrollView>
